--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,16 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Inicio</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+<ion-content text-center>
+  <h3>Bienvenid@ a la aplicación de La Colonia!</h3>
 
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+    Aquí econtrarás las mejores ofertas y podrás utilizar nuestros servicios exclusivos.
   </p>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <button ion-button secondary menuToggle>Abrir Menú</button>
 </ion-content>
