--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>List</ion-title>
+    <ion-title>Búsqueda</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -17,7 +17,13 @@
       </div>
     </button>
   </ion-list>
-  <div *ngIf="selectedItem" padding>
-    You navigated here from <b>{{selectedItem.title}}</b>
+  <div class="selected-item" *ngIf="selectedItem">
+    <h6>Añadir {{ selectedItem.title }} a la carretilla?</h6>
+    <button ion-button  (click)="removeSelectedItem()">
+      Quitar
+    </button>
+    <button class="add" ion-button  (click)="addSelectedItem()">
+      Añadir
+    </button>
   </div>
 </ion-content>
