--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -18,6 +18,9 @@
       </div>
     </ion-buttons>
   </ion-navbar>
+  <div class="search-bar">
+    <ion-input type="text" placeholder="Presiona para buscar productos"></ion-input>
+  </div>
 </ion-header>
 
 <ion-content>
